[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/HUD/WinPannel.gd" type="Script" id=1]
[ext_resource path="res://World/HUD/PanelFinish.tres" type="Theme" id=2]

[node name="WinPannel" type="Panel"]
margin_left = 54.0
margin_top = 27.0
margin_right = 261.0
margin_bottom = 153.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MonedasRecolectadas" type="Label" parent="."]
margin_left = 18.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 24.0

[node name="VidasRestantes" type="Label" parent="."]
margin_left = 18.0
margin_top = 28.0
margin_right = 58.0
margin_bottom = 42.0

[node name="Tiempo" type="Label" parent="."]
margin_left = 18.0
margin_top = 46.0
margin_right = 70.0
margin_bottom = 60.0

[node name="PuntuacionTotal" type="Label" parent="."]
margin_left = 18.0
margin_top = 64.0
margin_right = 93.0
margin_bottom = 78.0

[node name="RestartButon" type="Button" parent="."]
margin_left = 117.0
margin_top = 90.0
margin_right = 171.0
margin_bottom = 110.0
text = "Restart"

[connection signal="pressed" from="RestartButon" to="." method="_on_RestartButon_pressed"]
